Fixed cut off dropdown menus

--- a/brit/static/scss/components/_cards.scss
+++ b/brit/static/scss/components/_cards.scss
@@ -1,5 +1,6 @@
 // Card styling
 .card {
+  overflow: visible !important; // Ensure dropdowns are not clipped by card boundaries
   border-color: rgba($secondary, 0.3);
 
   .card-header {
